compiler/tests/en/errors/dyn_not_interface.salam
// EXPECT: E001
struct Dog:
    func bark() : str: ret "woof" end
end

func main:
    d : dyn Dog = Dog {}
    __ d.bark()
end
